# libguard-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/accounts/: models.py
apps/accounts/migrations/: 0001_initial.py
apps/authentication/: authentication.py  models.py  serializers.py  services.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/authentication/serializers/: serializers.py
apps/dependency_analysis/: apps.py  serializers.py  tasks.py  urls.py  views.py
apps/projects/: admin.py  urls.py  views.py
apps/projects/admins/: __init__.py  project_admin.py  upload_admin.py  version_admin.py
apps/projects/migrations/: 0001_initial.py
apps/projects/models/: project_model.py  upload_model.py  version_model.py
apps/projects/serializers/: project_serializer.py  upload_serializer.py  version_serializer.py
core/: settings.py  urls.py
